# plenty_taxhub_generator

./: .gitignore  README.md  pyproject.toml
plenty_taxhub_generator/: __init__.py  __main__.py  cli.py
tests/: test_api_data.py  test_taxhub.py  test_utils.py
